# journalpp

./: .gitignore  Makefile.am  compile_commands.json  configure.ac
doc/: journalpp.texi
include/journalpp/: journalpp.h
src/: lib.cpp
test/: high_level_log.cpp  marshalling_fields.cpp  sanity.cpp
